syntax = "proto3";
package table;

message BizIds {
    int32 biz_id = 1;
    int64 step = 2;
    int64 value = 3;
    int64 version = 4;
    int64 max_value = 5;
    int64 bak_value = 6;
}
/*
CREATE TABLE biz_ids_tbl (
    biz_id INT PRIMARY KEY,
    step BIGINT,
    value BIGINT,
    version BIGINT,
    max_value BIGINT,
    bak_value BIGINT
)
*/